# sourcebound

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BaseInputHandler_8h.html  BaseInputHandler_8h.js  BaseInputHandler_8h__dep__incl.map  BaseInputHandler_8h__dep__incl.md5  BaseInputHandler_8h__incl.map  BaseInputHandler_8h__incl.md5  BaseInputHandler_8h_source.html  CMakeLists.txt  CommandQueue_8cpp.html  CommandQueue_8cpp__incl.map  CommandQueue_8cpp__incl.md5  CommandQueue_8h.html  CommandQueue_8h__dep__incl.map  CommandQueue_8h__dep__incl.md5  CommandQueue_8h__incl.map  CommandQueue_8h__incl.md5  CommandQueue_8h_source.html  Components_8h.html  Components_8h__dep__incl.map  Components_8h__dep__incl.md5  Components_8h__incl.map  Components_8h__incl.md5  Components_8h_source.html  ConsoleSink_8h.html  ConsoleSink_8h__dep__incl.map  ConsoleSink_8h__dep__incl.md5  ConsoleSink_8h__incl.map  ConsoleSink_8h__incl.md5  ConsoleSink_8h_source.html  DenseComponentArray_8h.html  DenseComponentArray_8h.js  DenseComponentArray_8h__dep__incl.map  DenseComponentArray_8h__dep__incl.md5  DenseComponentArray_8h__incl.map  DenseComponentArray_8h__incl.md5  DenseComponentArray_8h_source.html  (+636 more)
.github/workflows/: doxygen.yml
.obsidian/: workspace.json
docs/: decisions.md  journal.md  journal_template.md  journal_template.md.md  research.md
docs/markdown-templates/: journal_template.md
include/ecs/: DenseComponentArray.h  Entity.h  EntityManager.h  IComponentArray.h  IComponentManager.h  IEntityManager.h  ISystem.h  ISystemManager.h  SystemManager.h  ecs_config.h
include/ecs/components/: Components.h
include/gamestate/: CommandQueue.h  GameWorld.h  ICommand.h  ICommandQueue.h  IGameWorld.h  PlayerMoveCommand.h
include/input/: BaseInputHandler.h  HardcodedBindingMap.h  IBindingMap.h  IEventSource.h  IInputHandler.h  IInputNormalizer.h  InputAction.h  InputCode.h  InputNormalizer.h  KeyboardHandler.h  SDLEventSource.h
include/logger/: Logger.h
include/logger/sinks/: ConsoleSink.h  ISink.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+63 more)
src/: main.cpp
src/ecs/: EntityManager.cpp  SystemManager.cpp
src/gamestate/: CommandQueue.cpp  PlayerMoveCommand.cpp
src/input/: CommandQueue.cpp  HardCodedBindingMap.cpp  InputNormalizer.cpp  KeyboardHandler.cpp
src/logger/: Logger.cpp
tests/: .clang-tidy  command_queue_tests.cpp  component_manager_tests.cpp  ecs_integration_tests.cpp  entity_manager_tests.cpp  game_world_tests.cpp  hardcoded_bindings_tests.cpp  input_code_tests.cpp  input_normalizer_tests.cpp  keyboard_handler_tests.cpp  logger_tests.cpp  player_move_command_tests.cpp  system_manager_tests.cpp  test_dummy.cpp
tests/mocks/: MockBindingMap.h  MockCommandQueue.h  MockComponentManager.h  MockEntityManager.h  MockEventSource.h  MockInputNormalizer.h  MockSink.h  MockSystem.h  MockSystemManager.h  SimpleMockCommand.h
